# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")

test_suite(
    name = "tests",
    tests = [
        "//build/kernel/kleaf/tests/cc_testing",
        "//build/kernel/kleaf/tests/ddk_config_analysis_test",
        "//build/kernel/kleaf/tests/ddk_config_test",
        "//build/kernel/kleaf/tests/ddk_menuconfig_test",
        "//build/kernel/kleaf/tests/ddk_test",
        "//build/kernel/kleaf/tests/debug_test",
        "//build/kernel/kleaf/tests/empty_binary_test",
        "//build/kernel/kleaf/tests/exec_test",
        "//build/kernel/kleaf/tests/hermetic_test",
        "//build/kernel/kleaf/tests/kernel_build_config_test",
        "//build/kernel/kleaf/tests/kernel_build_test",
        "//build/kernel/kleaf/tests/kernel_config_test",
        "//build/kernel/kleaf/tests/kernel_images_test",
        "//build/kernel/kleaf/tests/kernel_module_group_test",
        "//build/kernel/kleaf/tests/libcap_test",
        "//build/kernel/kleaf/tests/merge_module_symvers_test",
        "//build/kernel/kleaf/tests/merged_kernel_uapi_headers_test",
        "//build/kernel/kleaf/tests/native_binary_with_arg_test",
        "//build/kernel/kleaf/tests/trim_test",
        "//build/kernel/kleaf/tests/utils_test",
        "//build/kernel/kleaf/tests/zip_test",
    ],
)

bzl_library(
    name = "empty_test",
    srcs = [
        "empty_test.bzl",
    ],
    visibility = ["//build/kernel/kleaf:__subpackages__"],
)

bzl_library(
    name = "hermetic_test",
    srcs = [
        "hermetic_test.bzl",
    ],
    visibility = ["//build/kernel/kleaf:__subpackages__"],
    deps = [
        "//build/kernel/kleaf:hermetic_tools_def",
        "@bazel_skylib//lib:shell",
    ],
)

bzl_library(
    name = "runtime_protection_presence_test/symbol_presence_test_bzl_lib",
    srcs = [
        "runtime_protection_presence_test/symbol_presence_test.bzl",
    ],
    visibility = ["//build/kernel/kleaf:__subpackages__"],
    deps = [
        "//build/kernel/kleaf:hermetic_tools_def",
        "//build/kernel/kleaf/impl",
        # TODO: b/401193617 -- Delete when VARS is no longer needed.
        "@kernel_toolchain_info//:dict",
    ],
)

py_binary(
    name = "fail_binary_test_binary",
    srcs = ["fail_binary_test.py"],
    main = "fail_binary_test.py",
    visibility = ["//build/kernel/kleaf/tests:__subpackages__"],
    deps = [
        "@io_abseil_py//absl/testing:absltest",
    ],
)
