load("@bazel_skylib//rules:build_test.bzl", "build_test")

# Make sure our examples may be built.
build_test(
    name = "ddk_examples",
    targets = [
        "//build/kernel/kleaf/tests/ddk_examples/local_includes:foo",
        "//build/kernel/kleaf/tests/ddk_examples/exported_includes/child",
        "//build/kernel/kleaf/tests/ddk_examples/conditional_dependency/child",
        "//build/kernel/kleaf/tests/ddk_examples/conditional_defines:foo",
    ],
)
