# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//build/kernel/kleaf/impl:ddk/ddk_module.bzl", "ddk_module")
load("//build/kernel/kleaf/impl:kernel_build.bzl", "kernel_build")
load("//build/kernel/kleaf/tests:failure_test.bzl", "failure_test")
load(":ddk_headers_test.bzl", "ddk_headers_test_suite")
load(":ddk_images_test.bzl", "ddk_images_test_suite")
load(":ddk_module_test.bzl", "ddk_module_test_suite")
load(":ddk_submodule_test.bzl", "ddk_submodule_test")
load(":ddk_uapi_headers_test.bzl", "ddk_uapi_headers_test_suite")
load(":makefiles_test.bzl", "makefiles_test_suite")

ddk_headers_test_suite(name = "ddk_headers_test_suite")

ddk_images_test_suite(name = "ddk_images_test_suite")

ddk_module_test_suite(name = "ddk_module_test_suite")

ddk_submodule_test(name = "ddk_submodule_test")

ddk_uapi_headers_test_suite(name = "ddk_uapi_headers_test_suite")

makefiles_test_suite(name = "makefiles_test_suite")

kernel_build(
    name = "ddk_test_submodule_cross_package_test_kernel_build",
    outs = [],
    build_config = "build.config.fake",
    tags = ["manual"],
)

ddk_module(
    name = "ddk_test_submodule_cross_package_test_ddk_module",
    kernel_build = ":ddk_test_submodule_cross_package_test_kernel_build",
    tags = ["manual"],
    deps = [
        "//build/kernel/kleaf/tests/ddk_test/subpackage:ddk_test_submodule_cross_package_test_ddk_submodule",
    ],
)

failure_test(
    name = "ddk_test_submodule_cross_package_test",
    error_message_substrs = ["submodules must be in the same package"],
    target_under_test = "ddk_test_submodule_cross_package_test_ddk_module",
)

test_suite(
    name = "ddk_test",
    tests = None,  # All tests in this package
)
